Added accent on my name :D

--- a/Note/Proposal.tex
+++ b/Note/Proposal.tex
@@ -14,7 +14,7 @@
 
 \title{CS281 Project Proposal \\
 	\large Scalable Signal Region Identification with applications to the ATLAS $W^\pm W^\pm W^\pm$ Analysis}
-\author{Nicolo Foppiani, Jonah Philion, Baojia(Tony) Tong}
+\author{Nicolo' Foppiani, Jonah Philion, Baojia(Tony) Tong}
 \date{}                                           % Activate to display a given date or no date
 
 \begin{document}
@@ -60,7 +60,7 @@ The ultimate goal would be have a software package that could take input as sign
 \paragraph{Collaboration Plan}
 Tony (G6) will be in charge of sample production and will work for reproducing the previous analysis cuts. He will also build NNs, offer support and guidance on the project. 
 Jonah (senior) will focus on understanding the most important features and building frameworks which are able to identify them for the different background.
-Nicolo (G1) will be mainly working on the implementation of different algorithms and to assessing the results with the proper metrics.
+Nicolo' (G1) will be mainly working on the implementation of different algorithms and to assessing the results with the proper metrics.
 
 \paragraph{Double-dipping}
 This project is related to the research interest of all the three students. This result, if successful, will be documented as an ATLAS internal note, and will be used by the official analysis.
