--- a/script/train_logistic_NN_pytorch.ipynb
+++ b/script/train_logistic_NN_pytorch.ipynb
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,11 +780,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pandas_dataset = test_dataset.dataset\n",
+    "pandas_dataset = val_dataset.dataset\n",
     "#pandas_dataset = pd.concat([test_dataset.dataset, train_dataset.dataset])\n",
     "#pandas_dataset = pd.concat([test_dataset.dataset, train_dataset.dataset, val_dataset.dataset])\n",
     "scale_factor = 1./0.15\n",
@@ -793,10 +793,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using matplotlib backend: Qt4Agg\n"
+     ]
+    }
+   ],
    "source": [
+    "mpl.rcParams['font.size'] = 14\n",
+    "%matplotlib auto\n",
     "significance = []\n",
     "signal = []\n",
     "background = []\n",
@@ -831,15 +841,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using matplotlib backend: Qt4Agg\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib auto\n",
+    "mpl.rcParams['font.size'] = 12\n",
     "significance = []\n",
     "signal = []\n",
     "background = []\n",
-    "probability_cuts = np.linspace(0, 0.4, 50)\n",
+    "probability_cuts = np.linspace(0, 1, 50)\n",
     "colors = ['b', 'r', 'g']\n",
     "total_bs_significance = 0.\n",
     "\n",
@@ -876,7 +895,7 @@
     "plt.xlabel('Classifier output', fontsize=16)\n",
     "plt.ylabel('Signficance', fontsize=16)\n",
     "plt.xlim((0, 1))\n",
-    "plt.ylim((0, 2))\n",
+    "plt.ylim((0, 2.2))\n",
     "plt.grid()\n",
     "plt.show()"
    ]
