Final commit of the work

--- a/script/train_logistic_NN_pytorch.ipynb
+++ b/script/train_logistic_NN_pytorch.ipynb
@@ -87,7 +87,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7fb1aea4de10>"
+       "<torch._C.Generator at 0x7f5230039e10>"
       ]
      },
      "execution_count": 7,
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -365,27 +365,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/lib64/python2.7/site-packages/pandas/core/indexing.py:537: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  self.obj[item] = s\n"
-     ]
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "len(pandas_dataset.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "non_input = ['l0_m', 'l1_m', 'l2_m', 'SF0S']\n",
     "train_fraction = 0.7\n",
     "pandas_dataset = shuffle(pandas_dataset)\n",
     "train_dataset, test_dataset, val_dataset, trainloader, testloader, valloader = split_dataset(pandas_dataset, non_input=non_input, training_fraction=0.7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['j0_m',\n",
+       " 'j0_pt',\n",
+       " 'j0_eta',\n",
+       " 'j0_phi',\n",
+       " 'l0_pt',\n",
+       " 'l0_eta',\n",
+       " 'l0_phi',\n",
+       " 'l0_c',\n",
+       " 'l0_isEl',\n",
+       " 'l1_pt',\n",
+       " 'l1_eta',\n",
+       " 'l1_phi',\n",
+       " 'l1_c',\n",
+       " 'l1_isEl',\n",
+       " 'l2_pt',\n",
+       " 'l2_eta',\n",
+       " 'l2_phi',\n",
+       " 'l2_c',\n",
+       " 'l2_isEl',\n",
+       " 'l0_l1_m',\n",
+       " 'l0_l1_pt',\n",
+       " 'l0_l1_eta',\n",
+       " 'l0_l1_phi',\n",
+       " 'l0_l1_c',\n",
+       " 'l0_l1_isEl',\n",
+       " 'l1_l2_m',\n",
+       " 'l1_l2_pt',\n",
+       " 'l1_l2_eta',\n",
+       " 'l1_l2_phi',\n",
+       " 'l1_l2_c',\n",
+       " 'l1_l2_isEl',\n",
+       " 'l2_l0_m',\n",
+       " 'l2_l0_pt',\n",
+       " 'l2_l0_eta',\n",
+       " 'l2_l0_phi',\n",
+       " 'l2_l0_c',\n",
+       " 'l2_l0_isEl',\n",
+       " 'm_3l',\n",
+       " 'pt_3l',\n",
+       " 'eta_3l',\n",
+       " 'phi_3l',\n",
+       " 'mt_3l',\n",
+       " 'mnew_3l',\n",
+       " 'met_pt',\n",
+       " 'met_phi']"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_dataset.input_vars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(['l0_l1_m',\n",
+    " 'l0_l1_pt',\n",
+    " 'l0_l1_eta',\n",
+    " 'l0_l1_phi',\n",
+    " 'l0_l1_c',\n",
+    " 'l0_l1_isEl',\n",
+    " 'l1_l2_m',\n",
+    " 'l1_l2_pt',\n",
+    " 'l1_l2_eta',\n",
+    " 'l1_l2_phi',\n",
+    " 'l1_l2_c',\n",
+    " 'l1_l2_isEl',\n",
+    " 'l2_l0_m',\n",
+    " 'l2_l0_pt',\n",
+    " 'l2_l0_eta',\n",
+    " 'l2_l0_phi',\n",
+    " 'l2_l0_c',\n",
+    " 'l2_l0_isEl',\n",
+    " 'm_3l',\n",
+    " 'pt_3l',\n",
+    " 'eta_3l',\n",
+    " 'phi_3l',\n",
+    " 'mt_3l',\n",
+    " 'mnew_3l',])"
    ]
   },
   {
